--- a/example/ign-c/src/Makefile
+++ b/example/ign-c/src/Makefile
@@ -16,6 +16,7 @@ TCHEM_INC = $(TCHEM_DIR)/include
 INCLUDES = -I. -I$(CVODE_INC) -I$(TCHEM_INC)
 
 DFLAGS = -DUSEJAC -DALLSPEC
+#DFLAGS = -DALLSPEC
 
 LIBS = $(CVODE_LIB) -L$(TCHEM_LIB) -ltchem -lm
 
