--- a/src/Makefile
+++ b/src/Makefile
@@ -22,9 +22,13 @@ TCHEMSUB = $(SRCS)/TC_chg.c    \
 TCHEMINC = $(INCLUDES)/TC_defs.h $(INCLUDES)/TC_interface.h \
            $(INCLUDES)/TC_params.h $(INCLUDES)/TC_kmodint.h
 
-all: $(TCHEMLIB) 
-lib: $(TCHEMLIB)
-obj: $(TCHEMOBJ)
+TCHEMU_SRC = $(SRCS)/TC_reduce.cpp
+TCHEMU_OBJ = $(SRCS)/TC_reduce.o
+TCHEMU_LIB = $(LIBDIR)/libtchemutil.a
+
+all: $(TCHEMLIB) $(TCHEMU_LIB)
+lib: $(TCHEMLIB) $(TCHEMU_LIB)
+obj: $(TCHEMOBJ) $(TCHEMU_OBJ)
 
 $(TCHEMLIB): $(TCHEMOBJ)
 	if [ ! -d "$(LIBDIR)" ]; then\
@@ -32,8 +36,14 @@ $(TCHEMLIB): $(TCHEMOBJ)
 	fi
 	ar cr $(TCHEMLIB) $(TCHEMOBJ) 
 
+$(TCHEMU_LIB): $(TCHEMU_OBJ)
+	if [ ! -d "$(LIBDIR)" ]; then\
+	  mkdir $(LIBDIR);\
+	fi
+	ar cr $(TCHEMU_LIB) $(TCHEMU_OBJ) 
+
 clean:
-	/bin/rm -f $(TCHEMLIB) $(TCHEMOBJ) *~
+	/bin/rm -f $(TCHEMLIB) $(TCHEMOBJ) $(TCHEMU_LIB) $(TCHEMU_OBJ) *~
 
 distclean: clean
 
@@ -42,3 +52,6 @@ $(SRCS)/TC_main.o: $(SRCS)/TC_main.c $(TCHEMSUB) $(TCHEMINC)
 
 $(SRCS)/TC_kmodint.o: $(SRCS)/TC_kmodint.c $(TCHEMINC)
 	$(CC) -I$(INCLUDES) $(CFLAGS) $(DFLAGS) -o $*.o -c $(SRCS)/TC_kmodint.c
+
+$(SRCS)/TC_reduce.o: $(SRCS)/TC_reduce.cpp $(TCHEMINC)
+	$(CXX) -I$(INCLUDES) $(CXXFLAGS) $(DFLAGS) -o $*.o -c $(SRCS)/TC_reduce.cpp
