--- a/MakeIncl.Vars.in
+++ b/MakeIncl.Vars.in
@@ -38,8 +38,8 @@ OS_NAME = @os_name@
 #--------------------------------------------------------------------
 
 #-things that can be changed for global effect
-CFLAGS   = -O2 -Wall
-CPPFLAGS = -O2 -Wall
+CFLAGS   = -O2 
+CPPFLAGS = -O2
 FFLAGS   = -O2
 
 # -ansi -pedantic -Wall 
