configure: take CFLAGS, CPPFLAGS, and FFLAGS from configure
Suggested-by: Barry Smith <bsmith@mcs.anl.gov>

--- a/MakeIncl.Vars.in
+++ b/MakeIncl.Vars.in
@@ -38,9 +38,10 @@ OS_NAME = @os_name@
 #--------------------------------------------------------------------
 
 #-things that can be changed for global effect
-CFLAGS   = -O2 
-CPPFLAGS = -O2
-FFLAGS   = -O2
+CFLAGS   = @CFLAGS@
+CPPFLAGS = @CPPFLAGS@
+CXXFLAGS = @CXXFLAGS@
+FFLAGS   = @FFLAGS@
 
 # -ansi -pedantic -Wall 
 
